--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,39 +1,248 @@
-.App {
+/*---------   General Rules       ---------*/
+
+.is-divider {
+  display: block;
+  width: 30%;
+  margin: auto;
+  border-bottom: #af3e3e79 1px solid;
+}
+
+.is-divider2 {
+  display: block;
+  width: 30%;
+  margin-bottom: 10px;
+  border-bottom: #2e2e2e79 1px solid;
+}
+
+.card {
+  border-radius: 20px;
+}
+
+.content ul {
+  margin-left: 0px;
+}
+
+.content li {
+  margin-top: 0em;
+}
+
+button {
+  width: 100%;
+  margin-left: 0% !important;
+  margin-right: 0% !important;
+}
+
+/*---------   Main Rules       ---------*/
+.columnsMain {
+  margin: 40px 60px 40px 20px
+}
+
+
+/*---------   Home Rules       ---------*/
+.BoxInfo {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.content h3:not(:first-child) {
+  margin-top: 0;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.content h3 {
+  font-size: 1.5em;
+  margin-bottom: 0.4em;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.post {
+  margin-bottom: 20px;
+}
+
+.nom svg {
+  color: rgb(236, 152, 152);
+}
+
+.title {
+  display: flex;
+  justify-content: space-between;
+  max-width: 90%;
+}
+
+.IconAction {
+  width: 15%;
+  display: flex;
+  justify-content: space-between;
+}
+
+.iconModify {
+  color: hsl(348, 86%, 61%);
+}
+
+.iconDelete {
+  color: black;
+}
+
+
+/*---------   AllUser Rules       ---------*/
+.centerImageprofil {
+  display: flex;
+  width: 100%;
+  justify-content: center;
+}
+
+
+.mediaUser {
+  align-items: flex-start;
+  display: block;
+  text-align: inherit;
+}
+
+.ContentmediaUser {
+  width: 100%;
+  display: flex;
+}
+
+.h2user {
+  text-align: center;
+  font-size: 1.20em !important;
+}
+
+.eachUser {
+  margin-bottom: 20px;
+  flex-wrap: wrap;
+  display: flex;
+
+}
+
+.user {
   display: flex;
   flex-direction: column;
   align-items: center;
+  flex: 1 0 30%;
+  margin-bottom: 20px;
+  list-style: none;
+  transition: transform 0.2s ease-in-out;
+}
+
+.user:hover {
+  cursor: pointer;
+  transform: scale(1.1);
+}
+
+.user img {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  border: 2px solid rgb(225, 29, 72);
+  text-align: center;
+  padding: 1px;
+}
+
+/*---------   Formulaire Rules       ---------*/
+.message-header {
+  margin-bottom: 40px;
+  border-radius: 10px;
+}
+
+.breadcrumb a {
+  align-items: center;
+  color: #c74848;
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  padding: 0 .75em;
+}
+
+.formAddPost {
+  margin: auto;
+  margin-left: 0px;
+  margin-right: 0px;
+  text-align: center;
+}
+
+#text {
+  width: 80%;
+}
+
+.fileBtnAddPost {
+  justify-content: center;
+  margin-bottom: 20px;
+}
+
+.file-labelName {
+  margin-left: 10px;
+}
+
+.message-header {
+  justify-content: center;
+}
+
+.formAuth {
+  display: grid;
+  grid-row-gap: 20px;
+  margin-top: 30px;
+  margin-left: 35%;
+  margin-right: 35%;
+}
+
+
+.butttonAuth {
+  margin-left: 25%;
+  margin-right: 25%;
+  justify-items: center;
+  border: none;
+  border-radius: 20px;
+  background-color: #FF5959;
   color: white;
+
 }
 
-.App-link {
-  color: #61dafb;
+/*---------   Error Rules       ---------*/
+
+.titleError {
+  font-size: 50px;
+  font-weight: bold;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
+.box {
+  justify-content: center;
+}
 
-  to {
-    transform: rotate(360deg);
-  }
+.agencement {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.imagesize {
+  height: 500px;
+  object-fit: cover;
+}
+
+.ErrorPolice {
+  font-size: 30px;
+}
+
+.Errorbutton {
+  padding: 0 25%;
+}
+
+/*---------   Likes Rules       ---------*/
+
+.like-container {
+  width: 100%;
+  display: flex;
+}
+
+.like-container img {
+  height: 3em;
+  object-fit: cover;
+}
+
+.like-container span {
+  font-size: 2em;
+}
+
+
+.custom-checkbox {
+  position: absolute;
+  bottom: 2em;
+  right: 3em;
 }
