--- a/frontend/src/components/header.css
+++ b/frontend/src/components/header.css
@@ -1,40 +1,69 @@
+/*---------   Header Rules       ---------*/
 header {
-    border-bottom: solid 1px grey;
+
     width: 100%;
     display: flex;
     flex-flow: row nowrap;
     justify-content: space-between;
     align-items: center;
+    background-color: #1c1b1b;
+    height: 85px;
 
 }
 
 .logo {
     margin-left: 5%;
-    height: 5em;
+    height: 4.2em;
 }
 
 .logo img {
-    width: 200%;
+    width: 100%;
     height: 100%;
-    object-fit: cover;
+
 }
 
-nav {
-    margin-right: 10%;
-    display: block;
+.navbar {
+    height: 100%;
+    width: 85%;
+    margin: auto;
+    background-color: #1c1b1b;
 }
 
-ul {
-    list-style: none;
-    display: flex;
+.items {
+    font-size: 1.2em;
+    color: #9c9c9c;
+    border-bottom: #af3e3e 2px solid;
 }
 
-ul li {
-    margin-right: 25%;
+.items2 {
+    font-size: 1.2em;
+    color: #9c9c9c;
+
+
 }
 
+.items:hover,
+.items2:hover {
+    color: #af3e3e;
+}
 
-a {
-    text-decoration: none;
-    color: black;
+.btnplace {
+    margin: 0;
+}
+
+.navbar.is-transparent .navbar-dropdown a.navbar-item.is-active {
+    background-color: #f5f5f5;
+    color: #af3e3e;
+}
+
+.navbar-link:not(.is-arrowless)::after {
+    border-color: #af3e3e;
+    margin-top: -.375em;
+    right: 1.125em;
+}
+
+.linkpagemenu {
+    position: relative;
+    top: 2px;
+    margin-left: 10px;
 }
